Opened 3 years ago
Closed 3 years ago
#17291 closed bug (fixed)
media server does not launch on boot
Reported by: | bbjimmy | Owned by: | nobody |
---|---|---|---|
Priority: | normal | Milestone: | Unscheduled |
Component: | Servers/media_server | Version: | R1/beta3 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | #17292 | |
Platform: | All |
Description (last modified by )
hrev55464 (x86_64)
On boot, the media server doed not launch. launching media preferences offers to launch the server but does not. Manually launching the server by navigating to /boot/system/servers and double clicking the media server and the media add-on server seems to get everything working, but from the media prefs app selecting "Restart media services" kills the server but does not launch it again.
Change History (5)
comment:1 by , 3 years ago
Description: | modified (diff) |
---|---|
Summary: | mdeia server does not launch on boot → media server does not launch on boot |
comment:2 by , 3 years ago
Blocking: | 17292 added |
---|
comment:3 by , 3 years ago
comment:4 by , 3 years ago
Indeed, there is an error in the syslog related to this when I turn on some more debugging information.
Note:
See TracTickets
for help on using tickets.
I guess https://git.haiku-os.org/haiku/commit/?id=895e0c8a3260907dd12f7bd6e44d7c8846ae7951 is the most likely culprit here, or the other launch_daemon changes. I don't know how that could have affected anything, though, as the "user" file does this exact same thing?