launch_daemon: Do not return errors from RegisterExternalEvent.

We will pick up events that have no match later on, and if we return
an error here, it will prevent the job from being initialized, which
we definitely do not want.

Fixes #17291.